Fix more relative urls

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,12 +28,12 @@
           </div>
           <div class="col-md-3">
             <h3>Gallery</h3>
-            <a href="#"><img src="/assets/img/gallery/thumb/1.jpg" title="Gallery 1" alt=""></a>
-            <a href="#"><img src="/assets/img/gallery/thumb/2.jpg" title="Gallery 2" alt=""></a>
-            <a href="#"><img src="/assets/img/gallery/thumb/3.jpg" title="Gallery 3" alt=""></a>
-            <a href="#"><img src="/assets/img/gallery/thumb/4.jpg" title="Gallery 4" alt=""></a>
-            <a href="#"><img src="/assets/img/gallery/thumb/5.jpg" title="Gallery 5" alt=""></a>
-            <a href="#"><img src="/assets/img/gallery/thumb/6.jpg" title="Gallery 6" alt=""></a>
+            <a href="#"><img src="{{ "/assets/img/gallery/thumb/1.jpg"  | prepend: site.baseurl }}" title="Gallery 1" alt=""></a>
+            <a href="#"><img src="{{ "/assets/img/gallery/thumb/2.jpg"  | prepend: site.baseurl }}" title="Gallery 2" alt=""></a>
+            <a href="#"><img src="{{ "/assets/img/gallery/thumb/3.jpg"  | prepend: site.baseurl }}" title="Gallery 3" alt=""></a>
+            <a href="#"><img src="{{ "/assets/img/gallery/thumb/4.jpg"  | prepend: site.baseurl }}" title="Gallery 4" alt=""></a>
+            <a href="#"><img src="{{ "/assets/img/gallery/thumb/5.jpg"  | prepend: site.baseurl }}" title="Gallery 5" alt=""></a>
+            <a href="#"><img src="{{ "/assets/img/gallery/thumb/6.jpg"  | prepend: site.baseurl }}" title="Gallery 6" alt=""></a>
           </div>
         </div>
       </div>
