Correct name to workshop17

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
 								<li><a href="#">Johannesburg - Maboneng</a></li>
 								<li><a href="#">Johannesburg - Braamfontiein</a></li>
 								<li class="divider"></li>
-								<li><a href="#">Cape Town - Warehouse17</a></li>
+								<li><a href="{{ "/workshop17.html"  | prepend: site.baseurl }}">Cape Town - Workshop17</a></li>
 								<li class="divider"></li>
 								<li><a href="#">Pretoria - Mamelodi</a></li>
 							</ul>
