--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -94,3 +94,24 @@
 .transparent {
 	opacity: 0.8;
 }
+
+.carousel {
+	.carousel-header {
+		position: absolute;
+		z-index: 5;
+		margin-top: 60px;
+		color: #FFF;
+		
+	}
+}
+.carousel-inner {
+	.item {
+		width: 100vw;
+		height: 100vh;
+		background-size: cover;
+		background-position: center center;
+		img {
+			object-fit: cover;
+		}
+	}
+}
