--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1,6 +1,19 @@
 .navbar-brand {
-	padding-top: 10px;
+	padding-top: 8px;
 	height: 55px;
+}
+
+.navbar-inverse {
+	background: rgba(77, 77, 79, 0.9);
+}
+
+.navbar-nav>li>a{
+	padding-top: 17px;
+	padding-bottom: 18px;
+}
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus {
+	background-color: #444;
 }
 
 .first {
@@ -101,7 +114,7 @@
 		z-index: 5;
 		margin-top: 60px;
 		color: #FFF;
-		
+
 	}
 }
 .carousel-inner {
