--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
   
   <title>OPEN</title>
   
-  <link rel="icon" href="{{ /assets/img/favicon.ico | prepend: site.baseurl }}">
+  <link rel="icon" type="image/png" href="{{ "/assets/img/favicon.png" | prepend: site.baseurl }}">
   
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
