--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,33 +9,35 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand nav-external" href="#home"><img src="assets/img/logo-transparent-white-crop.png" alt="" height="40"></a>
+					<a class="navbar-brand nav-external" href="{{ "/" | prepend: site.baseurl }}"><img src="{{ "/assets/img/logo-transparent-white-crop.png" | prepend: site.baseurl }}" alt="" height="40"></a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active">
-							<a href="index.html">Home</a>
+							<a href="{{ "/" | prepend: site.baseurl }}">Home</a>
 						</li>
 						<li>
-							<a href="about.html">About</a>
+							<a href="{{ "about.html" | prepend: site.baseurl }}">About</a>
 						</li>
 						<li>
-							<a href="membership.html">Become a Member</a>
+							<a href="{{ "membership.html" | prepend: site.baseurl }}">Become a Member</a>
 						</li>
 						<li>
-							<a href="#about">Host an Event</a>
+							<a href="{{ "about.html" | prepend: site.baseurl }}">Host an Event</a>
 						</li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Locations <span class="caret"></span></a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="#">Johannesburg - Maboneng</a></li>
-								<li><a href="#">Johannesburg - Braamfontiein</a></li>
+								<li><a href="#"><strong>Johannesburg</strong></a></li>
+								<li><a href="{{ "/maboneng.html"  | prepend: site.baseurl }}">Maboneng</a></li>
+								<li><a href="{{ "/wits.html"  | prepend: site.baseurl }}">Open at Wits (Coming soon)</a></li>
 								<li class="divider"></li>
-								<li><a href="{{ "/workshop17.html"  | prepend: site.baseurl }}">Cape Town - Workshop17</a></li>
+								<li><a href="#"><strong>Cape Town</strong></a></li>
+								<li><a href="{{ "/workshop17.html"  | prepend: site.baseurl }}">Workshop17, V&amp;A Waterfront</a></li>
 								<li class="divider"></li>
-								<li><a href="#">Pretoria - Mamelodi</a></li>
+								<li><a href="#"><strong>Tshwane (Pretoria)</strong></a></li>
+								<li><a href="{{ "/mamelodi.html"  | prepend: site.baseurl }}">Mamelodi (Coming soon)</a></li>
 							</ul>
-							
 						</li>
 						<li>
 							<a href="#contact">Community</a>
