Add some text and links to footer and hide missing stuff

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,19 +5,23 @@
       <div class="content">
         <div class="row">
           <div class="col-md-3">
-            <h3>Our Company</h3>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            <h3>About OPEN</h3>
+            OPEN designs, builds and managers co-working and innovation spaces for itself and select partners.
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-md-offset-3">
             <h3>Office</h3>
             <ul class="fa-ul">
-              <li><i class="fa fa-li fa-map-marker"></i><strong>Address:</strong> P. Sherman 42, Wallaby Way, Sidney</li>
-              <li><i class="fa fa-li fa-envelope"></i><strong>Email:</strong> <a href="mailto:support@email.com">support@email.com</a></li>
-              <li><i class="fa fa-li fa-globe"></i><strong>Website:</strong> <a href="http://www.domain.com">www.domain.com</a></li>
-              <li><i class="fa fa-li fa-phone"></i><strong>Toll Free:</strong> (123) 456-7890</li>
+              <li><i class="fa fa-li fa-map-marker"></i><strong>Address:</strong><br>
+                OPEN<br>
+                4th Floor, The Main Change<br>
+                20 Kruger Street<br>
+                Maboneng, Johannesburg</li>
+              <li><i class="fa fa-li fa-envelope"></i><strong>Email:</strong> <a href="mailto:hello@theopen.co.za">hello@theopen.co.za</a></li>
+              <li><i class="fa fa-li fa-globe"></i><strong>Website:</strong> <a href="http://theopen.co.za">theopen.co.za</a></li>
+              <li><i class="fa fa-li fa-phone"></i><strong>Tel:</strong> <a href="tel:+27-(0)10-900-2000">+27-(0)10-900-2000</a></li>
             </ul>
           </div>
-          <div class="col-md-3 partner">
+         <!--  <div class="col-md-3 partner">
             <h3>Partner</h3>
             <i class="fa fa-apple"></i>
             <i class="fa fa-html5"></i>
@@ -25,8 +29,8 @@
             <i class="fa fa-twitter"></i>
             <i class="fa fa-dribbble"></i>
             <i class="fa fa-maxcdn"></i>
-          </div>
-          <div class="col-md-3">
+          </div> -->
+          <!-- <div class="col-md-3">
             <h3>Gallery</h3>
             <a href="#"><img src="{{ "/assets/img/gallery/thumb/1.jpg"  | prepend: site.baseurl }}" title="Gallery 1" alt=""></a>
             <a href="#"><img src="{{ "/assets/img/gallery/thumb/2.jpg"  | prepend: site.baseurl }}" title="Gallery 2" alt=""></a>
@@ -34,7 +38,7 @@
             <a href="#"><img src="{{ "/assets/img/gallery/thumb/4.jpg"  | prepend: site.baseurl }}" title="Gallery 4" alt=""></a>
             <a href="#"><img src="{{ "/assets/img/gallery/thumb/5.jpg"  | prepend: site.baseurl }}" title="Gallery 5" alt=""></a>
             <a href="#"><img src="{{ "/assets/img/gallery/thumb/6.jpg"  | prepend: site.baseurl }}" title="Gallery 6" alt=""></a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -50,16 +54,10 @@
             <span class="copyright">&copy; 2014 OPEN. All Rights Reserved.</span>
 
             <span class="pull-right">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-google-plus"></i></a>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
-              <a href="#"><i class="fa fa-dribbble"></i></a>
-              <a href="#"><i class="fa fa-youtube"></i></a>
-              <a href="#"><i class="fa fa-pinterest"></i></a>
-              <a href="#"><i class="fa fa-tumblr"></i></a>
-              <a href="#"><i class="fa fa-github"></i></a>
-              <a href="#"><i class="fa fa-rss"></i></a>
+              <a href="https://www.facebook.com/OPENworkspaces"><i class="fa fa-facebook"></i></a>
+              <a href="https://twitter.com/OPENworkspaces"><i class="fa fa-twitter"></i></a>
+              <a href="http://vimeo.com/channels/theopen"><i class="fa fa-vimeo-square"></i></a>
+              <a href="http://www.linkedin.com/company/3522431"><i class="fa fa-linkedin"></i></a>
             </span>
           </div>
         </div>
