--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,13 +17,13 @@
 							<a href="{{ "/" | prepend: site.baseurl }}">Home</a>
 						</li>
 						<li>
-							<a href="{{ "about.html" | prepend: site.baseurl }}">About</a>
+							<a href="{{ "/about.html" | prepend: site.baseurl }}">About</a>
 						</li>
 						<li>
-							<a href="{{ "membership.html" | prepend: site.baseurl }}">Become a Member</a>
+							<a href="{{ "/membership.html" | prepend: site.baseurl }}">Become a Member</a>
 						</li>
 						<li>
-							<a href="{{ "about.html" | prepend: site.baseurl }}">Host an Event</a>
+							<a href="{{ "/events.html" | prepend: site.baseurl }}">Events</a>
 						</li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Locations <span class="caret"></span></a>
@@ -40,10 +40,10 @@
 							</ul>
 						</li>
 						<li>
-							<a href="#contact">Community</a>
+							<a href="{{ "/community.html" | prepend: site.baseurl }}">Community</a>
 						</li>
 						<li>
-							<a href="#contact">Thought</a>
+							<a href="{{ "/thought.html" | prepend: site.baseurl }}">Thought</a>
 						</li>
 					</ul>
 				</div>
