Fix up carousel to scroll

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,10 +77,10 @@
   <script src="{{ "/assets/plugins/jquery-magnific-popup/jquery.magnific-popup.min.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/assets/js/jquery.nav.js" | prepend: site.baseurl }}"></script>
   <script src="{{ "/assets/js/isotope.pkgd.min.js" | prepend: site.baseurl }}"></script>
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <!--<script src="https://maps.googleapis.com/maps/api/js"></script>-->
   <!-- END JS PLUGIN -->
 
   <!-- BEGIN JS TEMPLATE -->
-  <script src="{{ "/assets/js/main.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/assets/js/carousel.js" | prepend: site.baseurl }}"></script>
   <!-- END JS TEMPLATE -->
 </footer>
