--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -55,6 +55,10 @@
 	background-color: #A659FF;
 }
 
+.charcoal-transparent-bg {
+	background-color: rgba(77, 77, 79, 0.9);
+}
+
 .promo {
 	min-height: 250px;
 	color: #000;
@@ -125,7 +129,10 @@
 		z-index: 5;
 		margin-top: 60px;
 		color: #FFF;
-
+		h1 {
+			padding: 5px 10px 0px 10px;
+			margin-top: 0px;
+		}
 	}
 }
 .carousel-inner {
