Don't make Mamelodi clickable for now

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,8 @@
 								<li><a href="{{ "/workshop17.html"  | prepend: site.baseurl }}">Workshop17, V&amp;A Waterfront</a></li>
 								<li class="divider"></li>
 								<li><a href="#"><strong>Tshwane (Pretoria)</strong></a></li>
-								<li><a href="{{ "/mamelodi.html"  | prepend: site.baseurl }}">Mamelodi (Coming soon)</a></li>
+								<!-- <li><a href="{{ "/mamelodi.html"  | prepend: site.baseurl }}">Mamelodi (Coming soon)</a></li> -->
+								<li><a href="#">Mamelodi (Coming soon)</a></li>
 							</ul>
 						</li>
 						<li>
