--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -123,6 +123,28 @@
 	opacity: 0.8;
 }
 
+.smallimg {
+	max-width: 100px;
+	max-height: 80px;
+}
+
+.midimg {
+	max-width: 300px;
+	max-height: 200px;
+}
+
+.margin-right {
+	margin-right: 10px;
+}
+
+.margin-left {
+	margin-left: 10px;
+}
+
+.margin-bottom {
+	margin-bottom: 10px;
+}
+
 .carousel {
 	.carousel-header {
 		position: absolute;
