--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -62,15 +62,22 @@
 .promo {
 	min-height: 250px;
 	color: #000;
+	padding: 0px;
+	
 	h1, h2, h3, h4, p {
-		background-color: #FFF;
+		background-color: #FFD919;
 		padding: 5px;
+		margin: 0px;
 	}
 
-	cursor: pointer;
+	// cursor: pointer;
 	border: 1px #444 solid;
 	border-collapse: collapse;
 	margin-left: -1px;
+
+	a {
+		color: #000;
+	}
 }
 
 .double {
