Change some fp stuff

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -58,14 +58,17 @@
 .charcoal-transparent-bg {
 	background-color: rgba(77, 77, 79, 0.9);
 }
+.charcoal-bg {
+	background-color: rgb(77, 77, 79);
+}
 
 .promo {
 	min-height: 250px;
-	color: #000;
+	color: #FFF;
 	padding: 0px;
 	
 	h1, h2, h3, h4, p {
-		background-color: #FFD919;
+		background-color: rgb(77, 77, 79);
 		padding: 5px;
 		margin: 0px;
 	}
@@ -76,7 +79,7 @@
 	margin-left: -1px;
 
 	a {
-		color: #000;
+		color: #FFF;
 	}
 }
 
@@ -95,7 +98,7 @@
 	background-position-y: 50px;
 	background-position-x: 50%;
 	background-repeat: no-repeat;
-	background-color: #FFD919;
+	background-color: rgb(77, 77, 79);
 }
 
 .fullpage {
